fix image links for cg, mobile readability

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@
 
 body {
     font-family: 'IBM Plex Sans', sans-serif;
-    font-size: 14pt;
+    font-size: 1em;
     color: black;
     margin: auto;
     padding: 50px;
@@ -19,7 +19,7 @@ body {
 
 @media screen and (max-width: var(--content-width)) {
     body {
-        font-size: 30px;
+        font-size: 0.7em;
     }
 }
 
@@ -34,14 +34,16 @@ body {
 img {
     text-align: center;
     display: block;
-    max-width: var(--content-width);
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 600px;
 }
 
 table, th, td {
   align-self: center;
   border: 1px solid black;
   border-collapse: collapse;
-  font-size: 11pt;
+  font-size: 0.9em;
   padding: 0.5em;
   line-height: 1.2em;
   margin-left: auto;
@@ -68,8 +70,10 @@ pre {
 code {
     font-family: 'IBM Plex Mono', monospace;
     color: var(--code-color);
-    font-size: 14pt;
+    font-size: 1.1em;
     background-color: var(--codebox-color);
+    padding-left: 0.1em;
+    padding-right: 0.1em;
     tab-size: 4;
 }
 
